$Id: History,v 1.16 2001-08-24 20:36:11 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization/modeling
---------------------------------------

24th August 2001  John Allison  (vis-V03-02-13)
- Intoduced argument for printing in G4VModel::Validate(G4bool warn).
- Changed default return value in G4VModel::Validate(G4bool) to true.
- Invoke CalculateExtent after successful geometry change in
  G4PhysicalVolumeModel::Validate, and other bug fixes..

14th August 2001  John Allison  (vis-V03-02-11)
- Added sceneHandler.Begin/EndPrimitives messages to models (long
  standing bug!).

9th August 2001  John Allison  (vis-V03-02-10-00)
- Removed G4ModelingParameters::hierarchy.  It is no longer used.  The
  textual or graphical representation of the geometry hierarchy is now
  done in G4xxxTree classes in visua;ization/Tree.

25th July 2001  John Allison  (modeling-V03-02-03)
- Added G4VModel::GetG4PhysicalVolumeModel().
- Added G4VModel* argument to G4BoundingSphereScene constructor.
  Both the above are to facilitate access to a model, if it exists, and
  to invoke methods of G4PhysicalVolumeModel if it is one.